Source/WebCore/dom/Node.h
@@ -431,6 +431,8 @@ public:
     // Whether or not a selection can be started in this object
     virtual bool canStartSelection() const;
 
+    virtual bool shouldSelectOnMouseDown() { return false; }
+
     // Getting points into and out of screen space
     FloatPoint convertToPage(const FloatPoint&) const;
     FloatPoint convertFromPage(const FloatPoint&) const;
