Source/WebCore/html/HTMLAttachmentElement.h
@@ -48,6 +48,7 @@ private:
 
     virtual RenderPtr<RenderElement> createElementRenderer(Ref<RenderStyle>&&) override;
 
+    virtual bool shouldSelectOnMouseDown() override { return true; }
     virtual bool canContainRangeEndPoint() const override { return false; }
     virtual void parseAttribute(const QualifiedName&, const AtomicString&) override;
     
